Allow model overrides for profile runs
